--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -51,6 +51,13 @@
       color: #ffa500;
     }
 
+    .campaign-status {
+      background: #1e1e1e;
+      margin-top: 20px;
+      padding: 15px;
+      border-radius: 10px;
+    }
+
     .logout {
       margin-top: 20px;
       background: #ffa500;
@@ -65,6 +72,10 @@
     .logout:hover {
       background: #ffbe40;
     }
+
+    a {
+      color: #ffa500;
+    }
   </style>
 </head>
 <body>
@@ -73,6 +84,14 @@
     <p class="user-email" id="user-email">Loading...</p>
     <p class="credits" id="user-credits">Credits: --</p>
     <p class="badge" id="user-badge">Badge: 🟢 Rookie</p>
+
+    <div id="campaign-section" class="campaign-status" style="display: none;">
+      <h3>📢 Active Campaign</h3>
+      <p id="campaign-title"></p>
+      <p id="campaign-credits"></p>
+      <p><a id="campaign-link" href="#" target="_blank">View on SoundCloud</a></p>
+    </div>
+
     <button class="logout" onclick="logout()">Logout</button>
   </div>
 
@@ -96,6 +115,20 @@
 
       const badge = userData.badge || { name: "Rookie", emoji: "🟢" };
       document.getElementById("user-badge").textContent = `Badge: ${badge.emoji} ${badge.name}`;
+
+      // ✅ Check for active campaign
+      const campaignSnap = await db.collection("campaigns")
+        .where("userId", "==", user.uid)
+        .limit(1)
+        .get();
+
+      if (!campaignSnap.empty) {
+        const campaign = campaignSnap.docs[0].data();
+        document.getElementById("campaign-section").style.display = "block";
+        document.getElementById("campaign-title").textContent = `🎵 ${campaign.title}`;
+        document.getElementById("campaign-credits").textContent = `💳 ${campaign.credits} credits remaining`;
+        document.getElementById("campaign-link").href = campaign.trackUrl;
+      }
     });
 
     function logout() {
@@ -106,6 +139,7 @@
   </script>
 </body>
 </html>
+
 
 
 
