--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,17 @@
   <script>firebase.initializeApp(window.firebaseConfig);</script>
 
   <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #0d0d0d;
+      color: white;
+    }
+
     .hero {
       background: linear-gradient(145deg, #0e0e0e, #1a1a1a);
       padding: 80px 20px;
       text-align: center;
-      color: white;
     }
 
     .hero-inner h1 {
@@ -28,16 +34,24 @@
 
     .hero-inner p {
       font-size: 18px;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
       color: #ccc;
+    }
+
+    .button-grid {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 15px;
     }
 
     .button {
       background: #ff9900;
       color: black;
-      padding: 12px 24px;
-      border-radius: 8px;
+      padding: 14px 26px;
+      border-radius: 10px;
       font-weight: bold;
+      font-size: 1rem;
       text-decoration: none;
       transition: background 0.3s ease;
     }
@@ -61,9 +75,14 @@
   <header class="hero">
     <div class="hero-inner">
       <h1>🚀 Promote Your Track. Earn Credits. Grow Fast.</h1>
-      <p>TrackRepost helps artists get reposts on SoundCloud in exchange for credits.</p>
-      <a href="explore.html" class="button">🌎 Explore Campaigns</a>
-      <a href="submit-campaign.html" class="button" style="margin-left: 10px;">🎯 Submit Your Track</a>
+      <p>TrackRepost helps artists grow on SoundCloud by earning and spending credits through reposts.</p>
+      <div class="button-grid">
+        <a href="explore.html" class="button">🌎 Explore Campaigns</a>
+        <a href="submit-campaign.html" class="button">🎯 Submit Your Track</a>
+        <a href="credits.html" class="button">💳 Buy Credits</a>
+        <a href="dashboard.html" class="button">📊 Dashboard</a>
+        <a href="pro-plan.html" class="button">⭐ Go Pro</a>
+      </div>
     </div>
   </header>
 
@@ -74,4 +93,5 @@
   <script type="module" src="/js/header.js"></script>
 </body>
 </html>
+
 
