--- a/public/credits.html
+++ b/public/credits.html
@@ -6,82 +6,77 @@
   <title>Buy Credits - TrackRepost</title>
   <link rel="stylesheet" href="styles.css" />
 
-  <!-- ✅ Firebase SDKs (compat versions) -->
+  <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
-
-  <!-- ✅ Firebase Config -->
   <script src="/js/firebaseConfig.js"></script>
-
-  <!-- ✅ Initialize Firebase -->
-  <script>
-    firebase.initializeApp(window.firebaseConfig);
-  </script>
+  <script>firebase.initializeApp(window.firebaseConfig);</script>
 
   <style>
-    .logo-header {
-      max-width: 240px;
-      margin: 20px auto 10px;
-      display: block;
-    }
-    .credit-tier {
-      border: 1px solid #555;
-      padding: 16px;
-      margin: 12px 0;
-      border-radius: 8px;
+    body {
+      background-color: #0d0d0d;
+      color: #fff;
+      font-family: Arial, sans-serif;
       text-align: center;
+      padding: 40px 20px;
     }
-    .credit-tier h3 {
-      margin: 8px 0;
+
+    h1 {
+      font-size: 1.8rem;
+      margin-bottom: 20px;
     }
-    .credit-tier button {
-      margin-top: 10px;
+
+    .credit-button {
+      background: #ffa500;
+      color: black;
+      border: none;
+      padding: 14px 26px;
+      margin: 10px;
+      border-radius: 10px;
+      font-weight: bold;
+      font-size: 1rem;
+      cursor: pointer;
+    }
+
+    .credit-button:hover {
+      background: #ffbe40;
+    }
+
+    .credit-options {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 15px;
+      max-width: 600px;
+      margin: 0 auto;
+    }
+
+    footer {
+      margin-top: 40px;
+      color: #888;
+      font-size: 0.9rem;
     }
   </style>
 </head>
 <body>
-  <header>
-    <img src="/assets/logo-trackrepost.png" alt="TrackRepost Logo" class="logo-header" />
-  </header>
+  <h1>💳 Buy Credits</h1>
+  <p>Select a credit package to promote your track:</p>
 
-  <main class="container">
-    <h2>💳 Buy Credits</h2>
-
-    <div class="credit-tier">
-      <h3>500 Credits – $24.99</h3>
-      <button onclick="buyCredits(500, 2499)">Buy</button>
-    </div>
-
-    <div class="credit-tier">
-      <h3>1000 Credits – $34.99</h3>
-      <button onclick="buyCredits(1000, 3499)">Buy</button>
-    </div>
-
-    <div class="credit-tier">
-      <h3>2500 Credits + Artist Plan – $79.99</h3>
-      <button onclick="buyCredits(2500, 7999, 'Artist')">Buy</button>
-    </div>
-
-    <div class="credit-tier">
-      <h3>5000 Credits + Network Plan – $139.99</h3>
-      <button onclick="buyCredits(5000, 13999, 'Network')">Buy</button>
-    </div>
-
-    <div class="credit-tier">
-      <h3>25000 Credits + Promoter Plan – $549.99</h3>
-      <button onclick="buyCredits(25000, 54999, 'Promoter')">Buy</button>
-    </div>
-
-    <div id="status" class="status-message"></div>
-  </main>
+  <div class="credit-options">
+    <button class="credit-button" onclick="buyCredits(500)">500 credits - $24.99</button>
+    <button class="credit-button" onclick="buyCredits(1000)">1000 credits - $34.99</button>
+    <button class="credit-button" onclick="buyCredits(2500, 'Artist')">2500 credits + Artist Plan - $79.99</button>
+    <button class="credit-button" onclick="buyCredits(5000, 'Network')">5000 credits + Network Plan - $139.99</button>
+    <button class="credit-button" onclick="buyCredits(25000, 'Promoter')">25000 credits + Promoter Plan - $549.99</button>
+  </div>
 
   <footer>
-    <p>© 2025 TrackRepost. All rights reserved.</p>
+    <p>© 2025 TrackRepost. All Rights Reserved.</p>
   </footer>
 
-  <!-- ✅ Credit Logic -->
-  <script src="/js/credit.js" defer></script>
+  <!-- ✅ Load the buyCredits() function -->
+  <script type="module" src="/js/credit.js"></script>
 </body>
 </html>
 
