--- a/public/credits.html
+++ b/public/credits.html
@@ -24,23 +24,7 @@
 
     h1 {
       font-size: 1.8rem;
-      margin-bottom: 20px;
-    }
-
-    .credit-button {
-      background: #ffa500;
-      color: black;
-      border: none;
-      padding: 14px 26px;
-      margin: 10px;
-      border-radius: 10px;
-      font-weight: bold;
-      font-size: 1rem;
-      cursor: pointer;
-    }
-
-    .credit-button:hover {
-      background: #ffbe40;
+      margin-bottom: 10px;
     }
 
     .credit-options {
@@ -48,12 +32,39 @@
       flex-wrap: wrap;
       justify-content: center;
       gap: 15px;
-      max-width: 600px;
-      margin: 0 auto;
+      max-width: 700px;
+      margin: 0 auto 30px auto;
+    }
+
+    .buy-btn {
+      background: #ffa500;
+      color: black;
+      border: none;
+      padding: 14px 26px;
+      border-radius: 10px;
+      font-weight: bold;
+      font-size: 1rem;
+      cursor: pointer;
+    }
+
+    .buy-btn:hover {
+      background: #ffbe40;
+    }
+
+    #creditBalance {
+      font-size: 1.1rem;
+      margin-bottom: 20px;
+      color: #ccc;
+    }
+
+    #status {
+      margin-top: 20px;
+      color: #ff9900;
+      font-size: 0.95rem;
     }
 
     footer {
-      margin-top: 40px;
+      margin-top: 50px;
       color: #888;
       font-size: 0.9rem;
     }
@@ -61,22 +72,24 @@
 </head>
 <body>
   <h1>💳 Buy Credits</h1>
-  <p>Select a credit package to promote your track:</p>
+  <p id="creditBalance">Loading credits...</p>
 
   <div class="credit-options">
-    <button class="credit-button" onclick="buyCredits(500)">500 credits - $24.99</button>
-    <button class="credit-button" onclick="buyCredits(1000)">1000 credits - $34.99</button>
-    <button class="credit-button" onclick="buyCredits(2500, 'Artist')">2500 credits + Artist Plan - $79.99</button>
-    <button class="credit-button" onclick="buyCredits(5000, 'Network')">5000 credits + Network Plan - $139.99</button>
-    <button class="credit-button" onclick="buyCredits(25000, 'Promoter')">25000 credits + Promoter Plan - $549.99</button>
+    <button class="buy-btn" data-credits="500" data-price="2499">500 credits - $24.99</button>
+    <button class="buy-btn" data-credits="1000" data-price="3499">1000 credits - $34.99</button>
+    <button class="buy-btn" data-credits="2500" data-price="7999" data-plan="Artist">2500 credits + Artist Plan - $79.99</button>
+    <button class="buy-btn" data-credits="5000" data-price="13999" data-plan="Network">5000 credits + Network Plan - $139.99</button>
+    <button class="buy-btn" data-credits="25000" data-price="54999" data-plan="Promoter">25000 credits + Promoter Plan - $549.99</button>
   </div>
+
+  <div id="status"></div>
 
   <footer>
     <p>© 2025 TrackRepost. All Rights Reserved.</p>
   </footer>
 
-  <!-- ✅ Load the buyCredits() function -->
-  <script type="module" src="/js/credit.js"></script>
+  <!-- ✅ Hook into your credits.js logic -->
+  <script type="module" src="/js/credits.js"></script>
 </body>
 </html>
 
